apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
      - name: plex
        image: plexinc/pms-docker:1.42.2.10156-f737b826c
        ports:
          - containerPort: 32400

        volumeMounts:
          - mountPath: /config
            name: plex-pv-config
          - mountPath: /transcode
            name: plex-pv-transcode
          - mountPath: /data
            name: arr-hostpath
      restartPolicy: Always

      volumes:
        - name: plex-pv-config
          persistentVolumeClaim:
            claimName: plex-pv-config
        - name: plex-pv-transcode
          persistentVolumeClaim:
            claimName: plex-pv-transcode
        - name: arr-hostpath
          hostPath:
            path: /mnt/arr-media
            type: DirectoryOrCreate
